--- a/index.html
+++ b/index.html
@@ -90,25 +90,27 @@
 	<div class="controls-group">
 		<a href="/help/index.html" class="button" title="Help &amp; credits" target="_blank">?</a>
 		<div class="tabs">
+
 			<input type="radio" name="page" value="css" id="page-css" data-scope="file" />
 			<label for="page-css" title="⌘1" class="tab">
-				<span class="title">CSS 
-					<span class="if-not-separate"><i class="amp">&amp;</i> Result</span>
-				</span>
+				<span class="title">CSS</span>
 			</label>
 			
-			<input type="radio" name="page" value="html" id="page-html" data-scope="file" />
-			<label for="page-html" title="⌘2" class="tab">
-				<span class="title">HTML 
-					<span class="if-not-separate"><i class="amp">&amp;</i> Result</span>
-				</span>
+			<input type="radio" name="page" value="cts" id="page-cts" data-scope="file" />
+			<label for="page-cts" title="⌘2" class="tab">
+				<span class="title">CTS </span>
+			</label>
+
+			<input type="radio" name="page" value="content-html" id="page-content-html" data-scope="file" />
+			<label for="page-content-html" title="⌘3" class="tab">
+				<span class="title">Content HTML</span>
 			</label>
 			
-			<input type="radio" name="page" value="all" id="page-all" checked data-scope="file" />
-			<label for="page-all" title="⌘3" class="tab">
-				<span class="title">All</span>
+			<input type="radio" name="page" value="mockup-html" id="page-mockup-html" data-scope="file" />
+			<label for="page-mockup-html" title="⌘4" class="tab">
+				<span class="title">Mockup HTML</span>
 			</label>
-			
+
 			<input type="radio" name="page" value="javascript" id="page-javascript" data-scope="file" />
 			<label for="page-javascript" title="⌘4" class="tab">
 				<span class="title">JS<sub style="font-size: 50%; opacity: .6;">alpha</sub></span>
@@ -132,7 +134,15 @@ background: linear-gradient(45deg, #f06, yellow);
 min-height: 100%;</pre></section>
 <button title="Validate CSS" onclick="Dabblet.validate.CSS()" class="for-code css">✓</button>
 
-<section id="html-container" class="editor page"><pre id="html" spellcheck="false" class="language-html" contenteditable>&lt;!-- content to be placed inside &lt;body>…&lt;/body> --></pre></section>
+<iframe class="page" id="result" src="http://preview.dabblet.com"></iframe>
+<section id="cts-container" class="editor page"><pre id="css" spellcheck="false" class="language-cts" contenteditable>/**
+ * This is your CTS file.
+ */</pre></section>
+
+<section id="content-container" class="editor page"><pre id="html" spellcheck="false" class="language-html" contenteditable>&lt;!-- This is your Content HTML &lt;body>…&lt;/body> --></pre></section>
+<button title="Validate HTML" onclick="Dabblet.validate.HTML()" class="for-code html">✓</button>
+
+<section id="mockup-container" class="editor page"><pre id="html" spellcheck="false" class="language-html" contenteditable>&lt;!-- This is your Mockup HTML &lt;body>…&lt;/body> --></pre></section>
 <button title="Validate HTML" onclick="Dabblet.validate.HTML()" class="for-code html">✓</button>
 
 <section id="javascript-container" class="editor page"><pre id="javascript" spellcheck="false" class="language-javascript" contenteditable>// alert('Hello world!');</pre></section>
@@ -156,6 +166,7 @@ min-height: 100%;</pre></section>
 <div id="fontfamily" class="previewer">(ABCabc123&amp;@%)
 (ABCabc123&amp;@%)</div>
 <div id="gradient" class="previewer"><div></div></div>
+
 <div id="easing" class="previewer">
 	<svg width="100" height="100" viewBox="-20 -20 140 140">
 		<defs>
@@ -168,7 +179,9 @@ min-height: 100%;</pre></section>
 		<line x1="100" y1="0" x2="40" y2="30" />
 	</svg>
 </div>
+
 <div id="url" class="previewer"><img src="data:," alt="Loading…" /></div>
+
 <div id="entity" class="previewer"></div>
 
 <script src="/code/utopia.js"></script>
